# hiho

./: Cargo.toml  test_hoho.bat
data/: auto_lock_config.json  biometric_config.json  vault.enc
src/: auto_lock.rs  biometric.rs  cli.rs  crypto.rs  entry.rs  lib.rs  main.rs  password_generator.rs  session.rs  vault.rs
src/gui/: app.rs  main.rs
src/gui/components/: login.rs  main_window.rs  mod.rs
