[package]
name = "hiho"
version = "0.1.0"
edition = "2021"

[lib]
name = "hiho"
path = "src/lib.rs"


[dependencies]
aes = "0.8"
cbc = "0.1"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.6"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.2"
bincode = "1.3"
clipboard = "0.5"
csv = "1.1"
chrono = "0.4"

# GUI зависимости
egui = "0.27"
eframe = "0.27"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"

[features]
default = ["cli"]
cli = []
gui = []

[[bin]]
name = "hiho"
path = "src/main.rs"

[[bin]]
name = "hiho-gui"
path = "src/gui/main.rs"